--- a/src/main/resources/templates/nuevoProfesor.html
+++ b/src/main/resources/templates/nuevoProfesor.html
@@ -25,13 +25,17 @@
             <input type="text"
                 th:field="*{email}" placeholder="Email"
                 class="form-control mb-4 col-4">
+                
+            <input type="text"
+                th:field="*{direccion}" placeholder="Direccion"
+                class="form-control mb-4 col-4">
  
-            <button type="submit" class="btn btn-info col-2">Save Employee</button>
+            <button type="submit" class="btn btn-info col-2">Guardar Empleado</button>
         </form>
  
         <hr>
  
-        <a th:href="@{/}"> Back to Employee List</a>
+        <a th:href="@{/}"> Volver a Profesores</a>
     </div>
 </body>
 </html>
