--- a/src/main/resources/templates/prueba/crearPrueba.html
+++ b/src/main/resources/templates/prueba/crearPrueba.html
@@ -15,24 +15,47 @@
 	flex-direction: row;
 	align-items: center;
 }
+
 .preguntas {
 	display: flex;
 	flex-direction: row;
-	align-items: center;
+	align-items: start;
 }
+
 
 </style>
 
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-<!-- Con este codigo js invoco al servidor solo para pedir la porción de la página que contiene las 
-preguntas filtradas según el criterio del usuario  -->
+
 <script type="text/javascript">
+	//Con este codigo js invoco al servidor solo para pedir la porción de la página que contiene las 
+	//preguntas filtradas según el criterio del usuario 
+
 	function filtrarPreguntas() {
 		var url = '/prueba/filtrarPreguntas';
+		url = url + '/materia/' + $('#materias-combo').val();
+		url = url + '/tema/' + $('#temas-combo').val();
 
 		$("#preguntas-filtradas").load(url);
+	}
+
+	function agregarPregunta(idPreg, enunciado) {
+		var colId = '<td>' + idPreg + '</td>';
+		var colEnunciado = '<td>' + enunciado + '</td>';
+		var colNotas = '<td> <input type="text" size="2" value="1"></td>';
+		var botonBorrar = '<td><a class="btn btn-warning btn-sm" id="botonBorrar" onclick="quitar(this)">Quitar</a></td>'
+		var fila = '<tr>' + colId + colEnunciado + colNotas + botonBorrar
+				+ '</tr>';
+
+		//agrega fila a la tabla
+		$('#tabla-preguntas tr:last').after(fila);
+	}
+
+	function quitar(boton) {
+		var p = boton.parentNode.parentNode;
+		p.parentNode.removeChild(p);
 	}
 </script>
 
@@ -46,7 +69,7 @@ preguntas filtradas según el criterio del usuario  -->
 				<div class="card-body">
 					<div class="input-group input-group-sm mb-3">
 						<div class="input-group-prepend">
-							<span class="input-group-text" id="inputGroup-sizing-sm">Titlo</span>
+							<span class="input-group-text" id="inputGroup-sizing-sm">Titulo</span>
 						</div>
 						<input type="text" class="form-control" aria-label="Small"
 							aria-describedby="inputGroup-sizing-sm"
@@ -60,9 +83,10 @@ preguntas filtradas según el criterio del usuario  -->
 						<input type="text" class="form-control" aria-label="Small"
 							aria-describedby="inputGroup-sizing-sm" th:text="${prueba.desc}">
 					</div>
-
+					<button type="button" class="btn btn-primary">Guardar</button>
 				</div>
 			</div>
+
 		</div>
 		<div class="container my-2" align="center">
 			<div class="card">
@@ -71,8 +95,9 @@ preguntas filtradas según el criterio del usuario  -->
 
 					<div class="input-group mb-3">
 						<div class="input-group-prepend">
-							<select class="form-select form-select-sm"
-								aria-label=".form-select-sm example" th:field="*{materias}">
+							<select id="materias-combo" class="form-select form-select-sm"
+								aria-label=".form-select-sm example" th:field="*{materias}"
+								onchange="filtrarPreguntas()">
 								<option th:each="materia : ${materias}" th:value="${materia.id}"
 									th:text="${materia.desc}"></option>
 							</select>
@@ -81,8 +106,9 @@ preguntas filtradas según el criterio del usuario  -->
 
 					<div class="input-group mb-3">
 						<div class="input-group-prepend">
-							<select class="form-select form-select-sm"
-								aria-label=".form-select-sm example" th:field="*{temas}">
+							<select id="temas-combo" class="form-select form-select-sm"
+								aria-label=".form-select-sm example" th:field="*{temas}"
+								onchange="filtrarPreguntas()">
 								<option th:each="tema : ${temas}" th:value="${tema.id}"
 									th:text="${tema.desc}"></option>
 							</select>
@@ -90,42 +116,45 @@ preguntas filtradas según el criterio del usuario  -->
 					</div>
 
 				</div>
-				<button type="button" class="btn btn-info"
-					onclick="filtrarPreguntas()">Filtrar</button>
-
 
 			</div>
+
 		</div>
+
 	</div>
-	</div>
+
 
 	<div class="preguntas">
-
-		<div id="preguntas-seleccinadas">
-			<div th:fragment="fragmentoPreguntasFiltradas" id="bloque-preguntas">
-				<table style="width: 40%" border="1"
-					class="table table-striped table-responsive-md">
+		<div class="container my-2" align="center">
+			<div id="preguntas-seleccionadas" class="seccion-preguntas">
+				<table id="tabla-preguntas" border="1"
+					class="table table-striped table-sm">
 					<thead class="thead-dark">
 						<tr>
 							<th>Id</th>
-							<th>Pregunta seleccinadas</th>
+							<th>Pregunta seleccionadas</th>
+							<th>Puntos</th>
 							<th></th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="pregunta : ${preguntasfiltradas}">
+						<tr th:each="pregunta : ${preguntasSeleccionadas}">
 							<td th:text="${pregunta.id}"></td>
 							<td th:text="${pregunta.enunciado}"></td>
-							<td><a class="btn btn-success">Agregar</a></td>
+							<td><input type="text" size="2"></td>
+							<td><a class="btn btn-warning btn-sm">Borrar</a></td>
 						</tr>
 					</tbody>
 				</table>
+
 			</div>
 		</div>
-		
-		<div id="preguntas-filtradas">
-			<!-- Est parte se carga cuando el usuario hace click en el boton filtrar -->
 
+		<div class="container my-2" align="center">
+			<div id="preguntas-filtradas" class="seccion-preguntas">
+				<!-- Esta parte se carga cuando el usuario hace click en el boton filtrar -->
+
+			</div>
 		</div>
 	</div>
 
