crear prueba, funcionando sin guardar

--- a/src/main/resources/templates/prueba/pruebasExistentes.html
+++ b/src/main/resources/templates/prueba/pruebasExistentes.html
@@ -28,7 +28,7 @@
 					<td th:text="${prueba.id}"></td>
 					<td th:text="${prueba.titulo}"></td>
 					<td th:text="${prueba.desc}"></td>
-					<td><a th:href="@{/realizar/{id}(id=${prueba.id})}"
+					<td><a th:href="@{/prueba/realizar/{id}(id=${prueba.id})}"
 						class="btn btn-primary">Realizar</a></td>
 				</tr>
 			</tbody>
