--- a/src/main/resources/templates/prueba/crearPrueba.html
+++ b/src/main/resources/templates/prueba/crearPrueba.html
@@ -21,12 +21,10 @@
 	flex-direction: row;
 	align-items: start;
 }
-
-
 </style>
 
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="/js/jquery.tabletojson.min.js"></script>
 
 
 <script type="text/javascript">
@@ -41,11 +39,13 @@
 		$("#preguntas-filtradas").load(url);
 	}
 
+	//esta función lo que hace es construir a mano el html que representa una fila de la tabla
 	function agregarPregunta(idPreg, enunciado) {
 		var colId = '<td>' + idPreg + '</td>';
 		var colEnunciado = '<td>' + enunciado + '</td>';
 		var colNotas = '<td> <input type="text" size="2" value="1"></td>';
 		var botonBorrar = '<td><a class="btn btn-warning btn-sm" id="botonBorrar" onclick="quitar(this)">Quitar</a></td>'
+
 		var fila = '<tr>' + colId + colEnunciado + colNotas + botonBorrar
 				+ '</tr>';
 
@@ -56,6 +56,17 @@
 	function quitar(boton) {
 		var p = boton.parentNode.parentNode;
 		p.parentNode.removeChild(p);
+	}
+
+	function enviarPreguntas() {
+		var data = $('#tabla-preguntas').tableToJSON();
+		
+		fetch(window.location.host +'/prueba/guardarPrueba', {
+			  method: "POST",
+			  body: JSON.stringify(data),
+			  headers: {"Content-type": "application/json; charset=UTF-8"}
+			})
+
 	}
 </script>
 
@@ -83,7 +94,8 @@
 						<input type="text" class="form-control" aria-label="Small"
 							aria-describedby="inputGroup-sizing-sm" th:text="${prueba.desc}">
 					</div>
-					<button type="button" class="btn btn-primary">Guardar</button>
+					<button type="submit" class="btn btn-primary"
+						onclick="enviarPreguntas()">Guardar</button>
 				</div>
 			</div>
 
@@ -127,26 +139,21 @@
 	<div class="preguntas">
 		<div class="container my-2" align="center">
 			<div id="preguntas-seleccionadas" class="seccion-preguntas">
+			
 				<table id="tabla-preguntas" border="1"
 					class="table table-striped table-sm">
 					<thead class="thead-dark">
 						<tr>
 							<th>Id</th>
-							<th>Pregunta seleccionadas</th>
+							<th>Pregunta</th>
 							<th>Puntos</th>
 							<th></th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="pregunta : ${preguntasSeleccionadas}">
-							<td th:text="${pregunta.id}"></td>
-							<td th:text="${pregunta.enunciado}"></td>
-							<td><input type="text" size="2"></td>
-							<td><a class="btn btn-warning btn-sm">Borrar</a></td>
-						</tr>
+						<!-- las filas de esta tablas se agragan por js al apretar el boton "agregar" -->
 					</tbody>
 				</table>
-
 			</div>
 		</div>
 
