--- a/src/main/resources/templates/prueba/resultadoPrueba.html
+++ b/src/main/resources/templates/prueba/resultadoPrueba.html
@@ -14,7 +14,7 @@
 		<h3>Resultado Prueba</h3>
 		<p th:text="${resultado}"></p>
 
-		<a th:href="@{/pruebas}"> Volver a listado de pruebas</a>
+		<a th:href="@{/prueba/listar}"> Volver a listado de pruebas</a>
 	</div>
 </body>
 </html>
