--- a/src/main/resources/templates/prueba/crearPrueba.html
+++ b/src/main/resources/templates/prueba/crearPrueba.html
@@ -60,8 +60,9 @@
 
 	function enviarPreguntas() {
 		var data = $('#tabla-preguntas').tableToJSON();
+		var url = 'http://'+window.location.host +'/prueba/guardarPrueba';
 		
-		fetch(window.location.host +'/prueba/guardarPrueba', {
+		fetch(url, {
 			  method: "POST",
 			  body: JSON.stringify(data),
 			  headers: {"Content-type": "application/json; charset=UTF-8"}
@@ -96,6 +97,7 @@
 					</div>
 					<button type="submit" class="btn btn-primary"
 						onclick="enviarPreguntas()">Guardar</button>
+						
 				</div>
 			</div>
 
