Img fondo a Menu

--- a/src/main/resources/templates/Menu.html
+++ b/src/main/resources/templates/Menu.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
   <title>Bootstrap Example</title>
@@ -10,10 +11,11 @@
 </head>
 <body>
 
+
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">EducoTeka</a>
+      <a class="navbar-brand" href="#">Evaluoteca</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="http://localhost:8080/prueba/crearPrueba">Pruebas</a></li>
@@ -24,9 +26,12 @@
 </nav>
 
 <div class="container">
-  <h2>Cuestionarios, Examenes, Test, y muchos tipos de evaluaciones más</h2>
-  <p>Un sitio web pensado con propositos didacticos</p>
+  <h2>Cuestionarios, Exámenes, Test, y muchos tipos de evaluaciones más</h2>
+
 </div>
+	
+<center><img src="https://sni.gob.ec/documents/10180/107789/evaluacion.png/d176f16e-a204-445a-90fc-17b120d89bde?t=1442609067899"></center>
+
 
 </body>
 </html>
