Se agrega navbar

--- a/src/main/resources/templates/prueba/crearPregunta.html
+++ b/src/main/resources/templates/prueba/crearPregunta.html
@@ -104,6 +104,9 @@
 
 </head>
 <body>
+
+<nav th:replace= "Menu :: nav_bar"></nav>
+
 	<div class="cabezal">
 		<div class="container my-2" align="center">
 
