--- a/src/main/resources/templates/prueba/crearPrueba.html
+++ b/src/main/resources/templates/prueba/crearPrueba.html
@@ -73,7 +73,11 @@
 </script>
 
 </head>
+<nav th:replace= "Menu :: nav_bar"></nav>
 <body>
+
+
+
 	<div class="cabezal">
 		<div class="container my-2" align="center">
 
