--- a/src/main/resources/templates/prueba/realizarPrueba.html
+++ b/src/main/resources/templates/prueba/realizarPrueba.html
@@ -9,6 +9,7 @@
 	crossorigin="anonymous">
 </head>
 <body>
+<nav th:replace= "Menu :: nav_bar"></nav>
 	<div class="container my-2" align="center">
 
 		<h1 th:text="${prueba.titulo}"></h1>
