--- a/src/main/resources/templates/Menu.html
+++ b/src/main/resources/templates/Menu.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
+<nav th:fragment="nav_bar" class="navbar navbar-inverse">
 <head>
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
@@ -12,7 +14,7 @@
 <body>
 
 
-<nav class="navbar navbar-inverse">
+
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Evaluoteca</a>
