--- a/src/main/resources/templates/prueba/pruebasExistentes.html
+++ b/src/main/resources/templates/prueba/pruebasExistentes.html
@@ -8,6 +8,7 @@
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	crossorigin="anonymous">
 </head>
+<nav th:replace= "Menu :: nav_bar"></nav>
 <body>
 	<div class="container my-2" align="center">
 
