--- a/src/main/resources/templates/prueba/fragment_preguntaMOpcion.html
+++ b/src/main/resources/templates/prueba/fragment_preguntaMOpcion.html
@@ -11,6 +11,12 @@
 		<div class="card-body">
 			<div class="input-group input-group-sm mb-3">
 				<div class="input-group-prepend">
+				
+				<span class="input-group-text" id="inputGroup-sizing-sm">Pregunta :</span>
+				</div>
+				<input type="text" class="form-control" aria-label="Small"
+					aria-describedby="inputGroup-sizing-sm" id="Pregunta">
+					
 					<span class="input-group-text" id="inputGroup-sizing-sm">Titulo
 						opcion:</span>
 				</div>
