Cambios en HTML

--- a/src/main/resources/templates/Menu.html
+++ b/src/main/resources/templates/Menu.html
@@ -17,7 +17,7 @@
 
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Evaluoteca</a>
+      <a class="navbar-brand" href="http://localhost:8080/menu">Evaluoteca</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="http://localhost:8080/prueba/crearPrueba">Pruebas</a></li>
