--- a/src/main/resources/templates/nuevoProfesor.html
+++ b/src/main/resources/templates/nuevoProfesor.html
@@ -29,8 +29,9 @@
             <input type="text"
                 th:field="*{direccion}" placeholder="Direccion"
                 class="form-control mb-4 col-4">
+            
  
-            <button type="submit" class="btn btn-info col-2">Guardar Empleado</button>
+            <button type="submit" class="btn btn-info col-2">Guardar Profesor</button>
         </form>
  
         <hr>
