--- a/src/main/resources/templates/prueba/crearPrueba.html
+++ b/src/main/resources/templates/prueba/crearPrueba.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head >
- 	<div th:replace="Menu :: header"></div>
+ 	<div th:replace="barraMenu :: headerBarra"></div>
 	<meta charset="ISO-8859-1">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -39,11 +39,13 @@
 </head>
 
 
-
+<header>
+<div th:replace="barraMenu :: menuVar"></div>
+</header>
 
 <body>
 
-<div th:insert="Menu :: menuVar"></div>
+
 
 	<div class="cabezal">
 		<div class="container my-2" align="center">
