--- a/src/main/resources/templates/barraMenu.html
+++ b/src/main/resources/templates/barraMenu.html
@@ -33,6 +33,7 @@
 						<a class="nav-link" href="/prueba/crearPrueba">Prueba nueva</a> 
 						<a class="nav-link" href="/prueba/crearPregunta">Pregunta</a>
 						<a class="nav-link" href="/prueba/listar">Listar Pruebas</a>
+						<a class="nav-link" href="/prueba/formularioCrearPruebaAutomatica">Prueba Automatica</a>
 					</div>
 				</div>
 			</nav>
