--- a/bin/src/main/resources/templates/prueba/pruebasExistentes.html
+++ b/bin/src/main/resources/templates/prueba/pruebasExistentes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+<div th:replace="barraMenu :: headerBarra"></div>
 <meta charset="ISO-8859-1">
 <title>Pruebas</title>
 <link rel="stylesheet"
@@ -8,7 +9,11 @@
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	crossorigin="anonymous">
 </head>
-<nav th:replace= "Menu :: nav_bar"></nav>
+
+<header>
+<div th:replace="barraMenu :: menuVar"></div>
+</header>
+
 <body>
 	<div class="container my-2" align="center">
 
