--- a/src/main/resources/templates/prueba/crearPregunta.html
+++ b/src/main/resources/templates/prueba/crearPregunta.html
@@ -147,7 +147,8 @@
 		</div>
 	</div>
 
-	<div class="seccionCrearOpciones" id="seccion-crear-opciones"></div>
+	<div class="seccionCrearOpciones" id="seccion-crear-opciones">
+	</div>
 
 	<div class="seccionListarOpciones" id="seccion-listar-opciones">
 	</div>
