generar prueba automatica

--- a/src/main/resources/templates/prueba/crearPregunta.html
+++ b/src/main/resources/templates/prueba/crearPregunta.html
@@ -124,8 +124,7 @@
 			<div class="card">
 				<h5 class="card-header">Nueva pregunta</h5>
 				<div class="card-body">
-					<p class="font-weight-normal">Seleccione el tipo de pregunta
-						que quiere crear</p>
+					<p class="font-weight-normal">Seleccione el tipo de pregunta que quiere crear</p>
 				</div>
 			</div>
 
