--- a/src/main/resources/templates/prueba/fragment_preguntaMOpcion.html
+++ b/src/main/resources/templates/prueba/fragment_preguntaMOpcion.html
@@ -17,11 +17,18 @@
 				<input type="text" class="form-control" aria-label="Small"
 					aria-describedby="inputGroup-sizing-sm" id="Pregunta">
 					
-					<span class="input-group-text" id="inputGroup-sizing-sm">Titulo
-						opcion:</span>
+				<span class="input-group-text" id="inputGroup-sizing-sm">Titulo	opcion:</span>
 				</div>
 				<input type="text" class="form-control" aria-label="Small"
 					aria-describedby="inputGroup-sizing-sm" id="tituloOpcion">
+					
+					<select name="temaSeleccionado" id="materias-combo"
+				class="form-select form-select-sm form-control mb-4 col-4"
+				aria-label=".form-select-sm example" th:field="*{temaSeleccionado}">
+				<option th:each="tema : ${temas}" th:value="${tema.id}"	th:text="${tema.desc}">
+					</option>
+				
+			</select> 
 			</div>
 			<button type="submit" class="btn btn-success btn-sm"
 				onclick="agregarOpcion()">Agregar Opción</button>
