--- a/src/main/resources/templates/prueba/fragment_preguntaVF.html
+++ b/src/main/resources/templates/prueba/fragment_preguntaVF.html
@@ -19,7 +19,7 @@
 
 				</div>
 				<input type="text" class="form-control" aria-label="Small"
-					aria-describedby="inputGroup-sizing-sm">
+					aria-describedby="inputGroup-sizing-sm" th:field="*{enunciado}">
 					
 					
 				<select name="temaSeleccionado" id="materias-combo"
@@ -35,16 +35,16 @@
 
 			<p class="font-weight-normal">Seleccione opción correcta</p>
 			<div class="form-check">
-				<input class="form-check-input" type="radio" name="flexRadioDefault"
-					id="flexRadioDefault1" /> <label class="form-check-label"
-					for="flexRadioDefault1">Verdadero</label>
+				<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1"  th:field="*{opcionCorrecta}" value="1"/> 
+					<label class="form-check-label" for="flexRadioDefault1">Verdadero</label>
 			</div>
 
 			<div class="form-check">
-				<input class="form-check-input" type="radio" name="flexRadioDefault"
-					id="flexRadioDefault2" checked /> <label class="form-check-label"
-					for="flexRadioDefault2">Falso</label>
+				<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" th:field="*{opcionCorrecta}" value="0" checked /> 
+					<label class="form-check-label"	for="flexRadioDefault2">Falso</label>
 			</div>
+			
+			
 
 			<button type="submit" class="btn btn-primary btn-sm">Guardar Pregunta</button>
 		</div>
