--- a/src/main/resources/templates/prueba/crearPrueba.html
+++ b/src/main/resources/templates/prueba/crearPrueba.html
@@ -61,7 +61,7 @@
 							<span class="input-group-text" id="inputGroup-sizing-sm">Titulo</span>
 						</div>
 						<input type="text" class="form-control" aria-label="Small"
-							aria-describedby="inputGroup-sizing-sm" th:text="${prueba.titulo}">
+							aria-describedby="inputGroup-sizing-sm" th:text="${prueba.titulo}" id="titulo">
 					</div>
 
 					<div class="input-group input-group-sm mb-3">
@@ -69,7 +69,7 @@
 							<span class="input-group-text" id="inputGroup-sizing-sm">Descripcion</span>
 						</div>
 						<input type="text" class="form-control" aria-label="Small"
-							aria-describedby="inputGroup-sizing-sm" th:text="${prueba.desc}">
+							aria-describedby="inputGroup-sizing-sm" th:text="${prueba.desc}" id="desc">
 					</div>
 					<button id="guardar" type="submit" class="btn btn-primary" onclick="enviarPreguntas()">Guardar</button>
 
