Volver a Pantalla principal

--- a/src/main/resources/templates/barraMenu.html
+++ b/src/main/resources/templates/barraMenu.html
@@ -24,7 +24,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav">
-						<a class="nav-link" href="#">Inicio</a> 
+						<a class="nav-link" href="/menu">Inicio</a> 
 						<a class="nav-link" href="/prueba/crearPrueba">Prueba nueva</a> 
 						<a class="nav-link" href="/prueba/crearPregunta">Pregunta</a>
 						<a class="nav-link" href="/prueba/listar">Listar Pruebas</a>
