--- a/bin/src/main/resources/templates/barraMenu.html
+++ b/bin/src/main/resources/templates/barraMenu.html
@@ -5,20 +5,15 @@
 </head>
 
 
-
-</head>
-<body>
 	<th:block th:fragment="headerBarra">
-
 		<link rel="stylesheet"
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 			integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 			crossorigin="anonymous">
-
-		<link rel="stylesheet"
+	</th:block>
+		
+			
 		<div th:fragment="menuVar">
-
-
 			<nav class="navbar navbar-expand-lg navbar-blue bg-dark">
 				<a class="navbar-brand" href="#"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -29,7 +24,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav">
-						<a class="nav-link" href="#">Inicio</a> 
+						<a class="nav-link" href="/menu">Inicio</a> 
 						<a class="nav-link" href="/prueba/crearPrueba">Prueba nueva</a> 
 						<a class="nav-link" href="/prueba/crearPregunta">Pregunta</a>
 						<a class="nav-link" href="/prueba/listar">Listar Pruebas</a>
@@ -37,7 +32,6 @@
 					</div>
 				</div>
 			</nav>
-
 		</div>
-</body>
+
 </html>
