--- a/bin/src/main/resources/templates/prueba/fragment_preguntaVF.html
+++ b/bin/src/main/resources/templates/prueba/fragment_preguntaVF.html
@@ -7,6 +7,9 @@
 
 <body>
 	<div th:fragment="fragmento">
+		<form action="#" th:action="@{/prueba/grabarPreguntaVF}"
+			th:object="${preguntaVFDTO}" method="POST">
+			
 		<div class="card-body">
 
 			<div class="input-group input-group-sm mb-3">
@@ -16,27 +19,36 @@
 
 				</div>
 				<input type="text" class="form-control" aria-label="Small"
-					aria-describedby="inputGroup-sizing-sm">
+					aria-describedby="inputGroup-sizing-sm" th:field="*{enunciado}">
+					
+					
+				<select name="temaSeleccionado" id="materias-combo"
+				class="form-select form-select-sm form-control mb-4 col-4"
+				aria-label=".form-select-sm example" th:field="*{idTema}">
+				<option th:each="tema : ${temas}" th:value="${tema.id}"	th:text="${tema.desc}">
+				</option>
+				
+			</select> 
 			</div>
 
 
 
 			<p class="font-weight-normal">Seleccione opción correcta</p>
 			<div class="form-check">
-				<input class="form-check-input" type="radio" name="flexRadioDefault"
-					id="flexRadioDefault1" /> <label class="form-check-label"
-					for="flexRadioDefault1">Verdadero</label>
+				<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1"  th:field="*{opcionCorrecta}" value="1"/> 
+					<label class="form-check-label" for="flexRadioDefault1">Verdadero</label>
 			</div>
 
 			<div class="form-check">
-				<input class="form-check-input" type="radio" name="flexRadioDefault"
-					id="flexRadioDefault2" checked /> <label class="form-check-label"
-					for="flexRadioDefault2">Falso</label>
+				<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" th:field="*{opcionCorrecta}" value="0" checked /> 
+					<label class="form-check-label"	for="flexRadioDefault2">Falso</label>
 			</div>
+			
+			
 
-			<button type="submit" class="btn btn-primary btn-sm"
-				onclick="guardarPregunta()">Guardar Pregunta</button>
+			<button type="submit" class="btn btn-primary btn-sm">Guardar Pregunta</button>
 		</div>
+		</form>
 	</div>
 </body>
 </html>
