--- a/src/main/resources/templates/Menu.html
+++ b/src/main/resources/templates/Menu.html
@@ -4,26 +4,48 @@
 <html lang="en">
 
 <head>
-<div th:replace="barraMenu :: headerBarra"></div>
-<title>Repositorio</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<header>
-<div th:replace="barraMenu :: menuVar"></div>
+
 </header>
 <body>
 	
 
 	<div class="container">
-		<h2>Cuestionarios, Exámenes, Test, y muchos tipos de evaluaciones
-			más</h2>
+		<center><h2>Cuestionarios, Exámenes, Test, y muchos tipos de evaluaciones
+			más</h2></center>
 
 	</div>
+	
+	
 
 	<center>
 		<img
 			src="https://sni.gob.ec/documents/10180/107789/evaluacion.png/d176f16e-a204-445a-90fc-17b120d89bde?t=1442609067899">
+	</center>
+	
+	<center>
+	
+<style>
+a:link, a:visited {
+  background-color: #f44336;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color: red;
+}
+</style>
+</head>
+<body>
+
+
+<a href="MenuEstudiante" target="_blank">Estudiante</a>
+
+<a href="MenuProfesor" target="_blank">Docente</a>
+	
 	</center>
 
 </body>
